devel
-----

* Updated OpenSSL to 1.1.1j and OpenLDAP to 2.4.57.

* added logging of elapsed time of ArangoSearch commit/consolidation/cleanup jobs

* Prevent arangosh from trying to connect after every executed command.
  This fixes the case when arangosh is started with default options, but no
  server is running on localhost:8529. In this particular case, arangosh will
  try to connect on startup and after every executed shell command. The
  connect attempts all fail and time out after 300ms.
  In this case we now don't try to reconnect after every command.

* Added 'custom-query' testcase to arangobench to allow execution of custom 
  queries.
  This also adds the options `--custom-query` and `--custom-query-file` for
  arangobench.

* On Windows create a minidump in case of an unhandled SEH exception for
  post-mortem debugging.
  
* Add JWT secret support for arangodump and arangorestore, i.e. they now also
  provide the command-line options `--server.ask-jwt-secret` and 
  `--server.jwt-secret-keyfile` with the same meanings as in arangosh.

* Add optional hyperlink to program option sections for information purposes,
  and add optional sub-headlines to program options for better grouping.
  These changes will be visible only when using `--help`.

* For Windows builds, remove the defines `_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS`
  and `_ENABLE_ATOMIC_ALIGNMENT_FIX` that were needed to build Boost components
  with MSVC in older versions of Boost and MSVC.
  Both of these defines are obsolete nowadays.

* Database initial sync considers document count on leader for
  estimating timeouts when over 1 million docs on leader.

* EE only bugfix: On DisjointSmartGraphs that are used in anonymous way,
  there was a chance that the query could fail, if non-disjoint collections
  were part of the query. Named DisjointSmartGraphs have been save to this bug.
  Example:
  DisjointSmartGraph (graph) on vertices -edges-> vertices
  Query:

  WITH vertices, unrelated